# m-ovito

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  BUILDING.md  CITATION.cff  CMakeLists.txt  LICENSE.MIT.txt  NOTICE  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM_BASELINE.md
src/main/: CMakeLists.txt  Main.cpp  transport_harness.cpp
src/main/resources/: Info.plist
src/ovito/core/: CMakeLists.txt  Core.h  ForwardDecl.h
src/ovito/core/app/: Application.cpp  Application.h  ApplicationService.cpp  ApplicationService.h  PluginManager.cpp  PluginManager.h  StandaloneApplication.cpp  StandaloneApplication.h  UserInterface.cpp  UserInterface.h
src/ovito/core/app/undo/: RefTargetOperations.h  UndoStack.cpp  UndoStack.h  UndoableOperation.cpp  UndoableOperation.h  UndoableTransaction.h
src/ovito/core/dataset/: DataSet.cpp  DataSet.h  DataSetContainer.cpp  DataSetContainer.h  UndoStack.cpp  UndoStack.h
src/ovito/core/dataset/animation/: AnimationFrameLabel.cpp  AnimationFrameLabel.h  AnimationSettings.cpp  AnimationSettings.h  TimeInterval.h
src/ovito/core/dataset/data/: AttributeDataObject.cpp  AttributeDataObject.h  BufferAccess.h  BufferPythonAccessGuard.h  DataBuffer.cpp  DataBuffer.h  DataBufferAccess.h  DataCollection.cpp  DataCollection.h  DataOORef.h  DataObject.cpp  DataObject.h  DataObjectAccess.h  DataObjectPath.h  DataObjectReference.h  DataVis.cpp  DataVis.h  RegisteredBufferAccess.h  SyclBufferAccess.h  SyclFlatMap.h  (+5 more)
src/ovito/core/oo/: CloneHelper.cpp  CloneHelper.h  DeferredObjectExecutor.h  DependentsList.h  NativePropertyFieldDescriptor.h  OORef.h  ObjectExecutor.h  OvitoClass.cpp  OvitoClass.h  OvitoObject.cpp  OvitoObject.h  OvitoObjectExecutor.h  PropertyField.cpp  PropertyField.h  PropertyFieldDescriptor.cpp  PropertyFieldDescriptor.h  PropertyFieldFlags.h  RefMaker.cpp  RefMaker.h  RefMakerClass.cpp  RefMakerClass.h  RefTarget.cpp  RefTarget.h  RefTargetExecutor.h  RefTargetListener.cpp  RefTargetListener.h  ReferenceEvent.h
src/ovito/core/rendering/: ColorCodingGradient.cpp  ColorCodingGradient.h  ColorMapHelper.h  ColormapHelper.h  ColormapsData.h  CylinderPrimitive.cpp  CylinderPrimitive.h  FrameBuffer.cpp  FrameBuffer.h  FrameGraph.cpp  FrameGraph.h  FrameGraphBuilder.cpp  FrameGraphBuilder.h  FrameGraphPrimitive.h  ImagePrimitive.cpp  ImagePrimitive.h  LinePrimitive.cpp  LinePrimitive.h  MarkerPrimitive.cpp  MarkerPrimitive.h  MeshPrimitive.cpp  MeshPrimitive.h  ObjectPickingIdentifierMap.cpp  ObjectPickingIdentifierMap.h  ObjectPickingMap.cpp  ObjectPickingMap.h  OpacityFunction.cpp  OpacityFunction.h  ParticlePrimitive.cpp  ParticlePrimitive.h  PseudoColorMapping.h  RenderBuffer.cpp  RenderBuffer.h  RenderSettings.cpp  RenderSettings.h  RendererResourceCache.h  RenderingJob.cpp  RenderingJob.h  RenderingPrimitive.h  SceneRenderer.cpp  (+6 more)
src/ovito/core/utilities/: BindFront.h  BoundedPriorityQueue.h  ChangeValueRAII.h  Color.h  DataTypes.h  Debugging.h  DeferredMethodInvocation.h  DisjointSet.h  Enumerate.h  Exception.cpp  Exception.h  FloatType.h  Graph.h  MemoryPool.h  MixedKeyCache.h  MoveOnlyAny.h  SortZipped.h
src/ovito/core/viewport/: ViewProjectionParameters.h  Viewport.cpp  Viewport.h  ViewportConfiguration.cpp  ViewportConfiguration.h  ViewportGizmo.h  ViewportLayout.cpp  ViewportLayout.h  ViewportProjectionParameters.h  ViewportSettings.cpp  ViewportSettings.h  ViewportSuspender.h  ViewportWindow.cpp  ViewportWindow.h  ViewportWindowInterface.cpp  ViewportWindowInterface.h
src/ovito/gui/qml/: CMakeLists.txt  GUI.h
src/ovito/gui/vpwidget/: CMakeLists.txt  WidgetViewportWindow.cpp  WidgetViewportWindow.h
src/ovito/opengl/: CMakeLists.txt  OffscreenInteractiveOpenGLSceneRenderer.cpp  OffscreenInteractiveOpenGLSceneRenderer.h  OffscreenOpenGLRenderer.cpp  OffscreenOpenGLRenderer.h  OffscreenOpenGLRenderingJob.cpp  OffscreenOpenGLRenderingJob.h  OffscreenOpenGLSceneRenderer.cpp  OffscreenOpenGLSceneRenderer.h  OpenGLCylinderPrimitive.cpp  OpenGLDepthTextureBlitter.cpp  OpenGLDepthTextureBlitter.h  OpenGLHelpers.h  OpenGLImagePrimitive.cpp  OpenGLLinePrimitive.cpp  OpenGLMarkerPrimitive.cpp  OpenGLMeshPrimitive.cpp  OpenGLParticlePrimitive.cpp  OpenGLPickingMap.cpp  OpenGLPickingMap.h  OpenGLRenderBuffer.cpp  OpenGLRenderBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderingFrameBuffer.cpp  OpenGLRenderingFrameBuffer.h  OpenGLRenderingJob.cpp  OpenGLRenderingJob.h  OpenGLResourceManager.cpp  OpenGLResourceManager.h  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.h  OpenGLShaderHelper.cpp  OpenGLShaderHelper.h  OpenGLTexture.h  PickingOpenGLSceneRenderer.cpp  PickingOpenGLSceneRenderer.h
src/ovito/opengl/gui/: CMakeLists.txt  OffscreenOpenGLRendererEditor.cpp  OffscreenOpenGLRendererEditor.h  OpenGLOffscreenViewportWindow.cpp  OpenGLOffscreenViewportWindow.h  OpenGLPickingBuffer.cpp  OpenGLPickingBuffer.h  OpenGLPickingMap.cpp  OpenGLPickingMap.h  OpenGLRendererEditor.cpp  OpenGLRendererEditor.h  OpenGLViewportWindow.cpp  OpenGLViewportWindow.h  WidgetOpenGLRenderingJob.cpp  WidgetOpenGLRenderingJob.h
src/ovito/opengl/resources/: opengl.qrc
src/ovito/opengl/window/: CMakeLists.txt  OpenGLPickingMap.cpp  OpenGLPickingMap.h  OpenGLViewportWindow.cpp  OpenGLViewportWindow.h  PickingOpenGLRenderingJob.cpp  PickingOpenGLRenderingJob.h  WidgetOpenGLRenderingJob.cpp  WidgetOpenGLRenderingJob.h
src/ovito/pyscript/: CMakeLists.txt
src/ovito/pyscript/binding/: AppBinding.cpp  ModifierRuntimeBinding.cpp  ModifierRuntimeBinding.h  ModifierRuntimeModule.cpp  PythonBinding.h  PythonInterface.cpp  SceneBinding.cpp  TypeCasting.cpp
src/ovito/pyscript/engine/: AdhocApplication.cpp  ScriptAutostarter.cpp  ScriptAutostarter.h  ScriptEngine.cpp  ScriptEngine.h
src/ovito/pyscript/extensions/: PythonScriptModifier.cpp  PythonScriptModifier.h  PythonViewportOverlay.cpp
src/ovito/pyscript/gui/: CMakeLists.txt  ObjectScriptEditor.cpp  ObjectScriptEditor.h  PythonScriptModifierEditor.cpp  PythonScriptModifierEditor.h  PythonViewportOverlayEditor.cpp  RunScriptAction.cpp
src/ovito/pyscript/python/: ovito_modifier.py
(+1869 files in other folders)
